--- a/thrift-api/pom.xml
+++ b/thrift-api/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>thrift-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
