--- a/thrift-client/src/main/resources/application.yml
+++ b/thrift-client/src/main/resources/application.yml
@@ -1,5 +1,17 @@
 server:
-  port: 8877 #当前服务监听的端口，给APP端提供服务的接口
+  port: 8877
   thrift:
-    host: 'localhost' #远端thrift服务IP
-    port: 9999 #远端thrift服务端口
+    host: localhost
+    port: 9999
+
+thrift:
+  server:
+    serverList:
+      - appName: com.iyingdi.user
+        host: localhost
+        port: 9999
+        interfaceList:
+          - com.iyingdi.user.thrift.UserThriftService
+          - com.lupf.thriftapi.StudentService
+
+
